logs/gui_run_last.log
  File "D:\GM\tools\2_Landmarking_v1.0\annot_gui_custom.py", line 598
    def _qc_refresh_and_locate(self):
                                     ^
IndentationError: unindent does not match any outer indentation level
